@@ -1,3 +1,12 @@
+2020-02-13  Stephan Szabo  <stephan.szabo@sony.com>
+
+        [PlayStation] Make special udis86 C file handling only happen for Visual Studio
+        https://bugs.webkit.org/show_bug.cgi?id=207729
+
+        Reviewed by Don Olmstead.
+
+        * PlatformPlayStation.cmake:
+
 2020-02-13  Caio Lima  <ticaiolima@gmail.com>
 
         [ESNext][BigInt] We don't support BigInt literal as PropertyName
